CHESS / mental breakdown

--- a/public/Selector.html
+++ b/public/Selector.html
@@ -9,10 +9,14 @@
     </script>
   </head>
   <body>
+    <button onclick = "Select('Splash')">Home</button>
+    <br>
     <h1>Games</h1>
     <button onclick = "Select('Checkers')">Checkers</button>
     <br>
     <button onclick = "Select('Snake')">Snake</button>
+    <br>
+    <button onclick = "Select('Chess')">Chess</button>
 
 
   </body>
