--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <title>Pressman's Game Zone</title>
-    
+
   </head>
   <body>
     <h2>Pressmans Game Spot</h2>
-    <iframe id = 'selector' name = "selector" src = "./Selector.html" width = 10% height = 500px ></iframe>
-    <iframe id = "game" name = "game" src = "./Games/Checkers.html" width = 79% height = 500px></iframe>
+    <iframe id = 'selector' name = "selector" src = "./Selector.html" width = 15% height = 500px ></iframe>
+    <iframe id = "game" name = "game" src = "./Games/Splash.html" width = 79% height = 500px></iframe>
 
 
   </body>
